kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: web    
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:      
    metadata:
      name: web-pod
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: vials/test:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
